--- a/css/pg.css
+++ b/css/pg.css
@@ -1,5 +1,5 @@
 *{margin:0;padding:0;box-sizing: border-box;}
-html,body{height:100%;font-family:"microsoft yahei","Yuanti SC","Helvetica","Arial","sans-serif";background-color: #ffffff}
+html,body{height:100%;font-family:"microsoft yahei","Yuanti SC","Helvetica","Arial","sans-serif";background-color: #ffffff;font-size:250%;}
 /*body{background: #97ada9;}*/
 ul{list-style: none;}
 img{position: absolute;}
